cambios en terminos y condiciones y en la política de pricidad se agrega

--- a/app/views/home/_terms.html.erb
+++ b/app/views/home/_terms.html.erb
@@ -26,27 +26,27 @@
 
 <h3>5.2 Responsabilidad de Acceso   </h3>
 
-<p>El Cliente es el único responsable del acceso y uso de los Servicios (incluyendo todas las actividades y transacciones) por parte de cualquier Usuario Autorizado y/o ID del Usuario registrado bajo la cuenta del Cliente, a menos que dicho acceso o uso de los Servicios sea resultado directo de negligencia por parte de Cúrsame. Es responsabilidad del Cliente, a través de su Usuario Autorizado que administra sus sistemas, permitir el acceso apropiado a cualquiera de los Usuarios Autorizados del Cliente.       </p>
+<p>El Cliente es el único responsable del acceso y uso de los Servicios (incluyendo todas las actividades y transacciones) por parte de cualquier Usuario Autorizado y/o ID del Usuario registrado bajo la cuenta del Cliente, a menos que dicho acceso o uso de los Servicios sea resultado directo de negligencia por parte de Cúrsame. Es responsabilidad del Cliente, a través de su Usuario Autorizado que administra sus sistemas, permitir el acceso apropiado a cualquiera de los Usuarios Autorizados del Cliente. </p>
 
 <h3>5.3 Responsabilidad por los ID y contraseñas del usuario   </h3>
 
-<p>El Cliente es el único responsable de mantener la confidencialidad de la información de acceso del Cliente, es decir, IDs y contraseñas de acceso a las cuentas de sus Usuarios Autorizados, y es responsable de todas las actividades que ocurren en su cuenta.   5.4 Notificación de uso no autorizado   El Cliente debe informarle inmediatamente a Cúrsame si nota cualquier actividad que indicara que su cuenta o información está siendo usada sin autorización, incluyendo: (a) El Cliente recibe la confirmación de una o más órdenes realizadas a través de su cuenta que en realidad nunca realizó o cualquier otro informe conflictivo similar; o (b) el Cliente nota el uso no autorizado de cualquier producto o servicio relacionado con su(s) cuenta(s)</p>
+<p>El Cliente es el único responsable de mantener la confidencialidad de la información de acceso del Cliente, es decir, IDs y contraseñas de acceso a las cuentas de sus Usuarios Autorizados, y es responsable de todas las actividades que ocurren en su cuenta. 5.4 Notificación de uso no autorizado El Cliente debe informarle inmediatamente a Cúrsame si nota cualquier actividad que indicara que su cuenta o información está siendo usada sin autorización, incluyendo: (a) El Cliente recibe la confirmación de una o más órdenes realizadas a través de su cuenta que en realidad nunca realizó o cualquier otro informe conflictivo similar; o (b) el Cliente nota el uso no autorizado de cualquier producto o servicio relacionado con su(s) cuenta(s)</p>
  
 <h2>6. Información del Cliente   </h2>
 
-<p>El Cliente es el único responsable por la información que almacena en los servidores de Cúrsame. El Cliente controla su información a través de su enlace generado. Cúrsame recomienda a los Clientes que archiven su información de manera regular y frecuente; el Cliente tiene absoluta responsabilidad de archivar su información y será el único responsable por información perdida o irrecuperable. El Cliente acuerda cumplir con las obligaciones legales concernientes a su información. Cúrsame eliminará información del Cliente una vez finalizado el presente Acuerdo. Sin embargo, Cúrsame puede llegar a retener información del Cliente en sus archivos luego de eliminarlo y no será responsable en lo absoluto por dicha información.   </p>
+<p>El Cliente es el único responsable por la información que almacena en los servidores de Cúrsame. El Cliente controla su información a través de su enlace generado. Cúrsame recomienda a los Clientes que archiven su información de manera regular y frecuente; el Cliente tiene absoluta responsabilidad de archivar su información y será el único responsable por información perdida o irrecuperable. El Cliente acuerda cumplir con las obligaciones legales concernientes a su información. Cúrsame eliminará información del Cliente una vez finalizado el presente Acuerdo. Sin embargo, Cúrsame puede llegar a retener información del Cliente en sus archivos luego de eliminarlo y no será responsable en lo absoluto por dicha información.  </p>
 
 <h3>6.1 Circunstancias especiales   </h3>
 
-<p>Cúrsame permitirá el acceso a los Servicios y a la información del Cliente a cualquier agente del Cliente ("Agente Autorizado") que presente a Cúrsame una carta notariada firmada por un funcionario del Cliente. Dicha carta deberá incluir declaraciones de autenticidad, autorización, y responsabilidad como lo estipula Cúrsame a su sola discreción. El cliente acuerda de forma expresa e irrevocable que Cúrsame puede confiar en dicha carta y en la autorización aparente de esa persona que solicita el acceso a los Servicios o a la cuenta del Cliente. Cúrsame no será responsable ante el Cliente o cualquier tercero por la veracidad de dicha carta o autoridad.   </p>
+<p>Cúrsame permitirá el acceso a los Servicios y a la información del Cliente a cualquier agente del Cliente ("Agente Autorizado") que presente a Cúrsame una carta notariada firmada por un funcionario del Cliente. Dicha carta deberá incluir declaraciones de autenticidad, autorización, y responsabilidad como lo estipula Cúrsame a su sola discreción. El cliente acuerda de forma expresa e irrevocable que Cúrsame puede confiar en dicha carta y en la autorización aparente de esa persona que solicita el acceso a los Servicios o a la cuenta del Cliente. Cúrsame no será responsable ante el Cliente o cualquier tercero por la veracidad de dicha carta o autoridad.    </p>
 
 <h2>7. Uso aceptable</h2>
 
 <p>Usted acuerda no utilizar los servicios de Cúrsame para:  </p> 
 
-<p>a. cargar, publicar, enviar por correo electrónico, transmitir u ofrecer de otra manera cualquier Contenido que propague mensajes de terror o describa tortura o muerte; si es un caso muy serio, se informará a la autoridad legal competente y/o se contactará al correspondiente proveedor de Internet;  </p> 
+<p>a. cargar, publicar, enviar por correo electrónico, transmitir u ofrecer de otra manera cualquier Contenido que propague mensajes de terror o describa tortura o muerte; si es un caso muy serio, se informará a la autoridad legal competente y/o se contactará al correspondiente proveedor de Internet;   </p> 
 
-<p>b. perjudicar a menores, esto incluye cualquier forma de pornografía infantil; si es un caso muy serio, se informará del contenido a la autoridad legal competente y/o se contactará al correspondiente proveedor de Internet; se prohibe  publicar cualquier  tipo de pornografía.</p>
+<p>b. perjudicar a menores, esto incluye cualquier forma de pornografía infantil; si es un caso muy serio, se informará del contenido a la autoridad legal competente y/o se contactará al correspondiente proveedor de Internet; se prohibe publicar cualquier tipo de pornografía.</p>
 
 <p>c. cargar, publicar, enviar por correo electrónico u ofrecer de otra manera cualquier Contenido que viole la patente, marca registrada, secreto de fabricación, derecho de autor u otros derechos propietarios de cualquier parte.</p>
 
@@ -68,19 +68,19 @@
 
 <p>l. interferir con el uso o disfrute de la red Cúrsame u otros servicios por parte de otros clientes o usuarios autorizados, incluyendo el uso excesivo de los servicios impidiendo el uso equitativo por parte de otros usuarios de Cúrsame.</p>
 
-<p>m. exponer a los proveedores, representantes, directivos, empleados, agentes, asociados o accionistas de Cúrsame a escrutinio público, ridículo o difamación</p>;
+<p>m. exponer a los proveedores, representantes, directivos, empleados, agentes, asociados o accionistas de Cúrsame a escrutinio público, ridículo o difamación;</p>
 
 <p>n. suplantar a cualquier persona o entidad, incluyendo, aunque sin limitarse a ellos, a representantes de Cúrsame, así como falsamente afirmar o inducir a interpretaciones erróneas sobre su personalidad o afiliación a personas o entidades;</p>
 
-<p>o. importar de forma paralela cualquier copia de obras con derechos de propiedad intelectual protegida con el objeto de venderla, alquilarla, etc. por provecho, recompensa y/</p>o
+<p>o. importar de forma paralela cualquier copia de obras con derechos de propiedad intelectual protegida con el objeto de venderla, alquilarla, etc. por provecho, recompensa y/o</p>
 
 <p>p. importar o poseer cualquier importación paralela de copias de obras con derechos de propiedad intelectual protegidas, tales como, películas, series de televisión o grabaciones musicales para su reproducción o visionado público, incluyendo, aunque sin limitación, locales de karaoke, restaurantes, tiendas, etc.</p>
 
 <h3>7.1 Ilegalidad/ Contenido adulto   </h3>
 
-<p>Cúrsame sanciona y no permite el contenido del sitio o la transmisión de información que contenga material obsceno o ilegal o fomente o promueva actividad ilegal, incluyendo pero no limitándose a juegos, venta de armas ilegales, y la promoción o publicación de cualquier material que pueda violar la legislación de delitos hostiles.  </p> 
+<p>Cúrsame sanciona y no permite el contenido del sitio o la transmisión de información que contenga material obsceno o ilegal o fomente o promueva actividad ilegal, incluyendo pero no limitándose a juegos, venta de armas ilegales, y la promoción o publicación de cualquier material que pueda violar la legislación de delitos hostiles.   </p> 
 
-<p>Cúrsame se reserva el derecho a suspender o rescindir inmediatamente y sin previo aviso cualquier cuenta o transmisión que viole esta política.   Asimismo, si el Cliente violara esta política, Cúrsame asistirá y cooperará activamente con las agencias policiales y las autoridades gubernamentales al recolectar y ofrecer información sobre el Cliente, el sitio del Cliente, el contenido obsceno o ilegal, y de aquellas personas que puedan haber accedido, adquirido o utilizado de manera inapropiada contenido obsceno o ilícito.</p>
+<p>Cúrsame se reserva el derecho a suspender o rescindir inmediatamente y sin previo aviso cualquier cuenta o transmisión que viole esta política. Asimismo, si el Cliente violara esta política, Cúrsame asistirá y cooperará activamente con las agencias policiales y las autoridades gubernamentales al recolectar y ofrecer información sobre el Cliente, el sitio del Cliente, el contenido obsceno o ilegal, y de aquellas personas que puedan haber accedido, adquirido o utilizado de manera inapropiada contenido obsceno o ilícito.</p>
 
 <h3>7.2 Conducta ilícita   </h3>
 
@@ -92,11 +92,11 @@
  
 <p>(a) Acceso sin autorización o uso de los Servicios de Cúrsame, incluyendo cualquier intento de sondeo, copia o prueba de vulnerabilidad de un sistema o la violación de medidas de seguridad o autenticación sin autorización expresa de Cúrsame; o b) Interferencia con el Servicio a cualquier cliente o sistema, incluyendo, sin limitación, congestión o intento deliberado de sobrecargar un sistema y ataques explícitos; o c) Utilización de cualquier dispositivo, software, o rutina que interfiera o intente interferir con el correcto funcionamiento de los Servicios; o d) Cualquier acción que imponga una carga desproporcionada o inmoderada para la infraestructura de Cúrsame</p>
  
-<p>El Cliente no deberá desarmar, desmontar, decodificar, extraer, revertir la ingeniería o de otra forma intentar derivar el código fuente del "software" (incluyendo los dispositivos, métodos, procesos, e infraestructura) que sustentan los Servicios o cualquier otro software en el sitio Web de Cúrsame.   8.4 Violación de derecho de autor o marca registrada   Los Servicios de Cúrsame se pueden utilizar únicamente con propósitos legales. Se prohíbe la transmisión, distribución o almacenamiento de cualquier material en violación a cualquier ley vigente o regulación, incluyendo la exportación de leyes de control. Esto incluye, sin limitación, material protegido por patente, derecho de autor, marca registrada, marca identificada de servicios, secreto de fabricación, u otros derechos de propiedad intelectual. Si utiliza material de terceros, deberá obtener autorización previa. Al utilizar los Servicios, usted representa y garantiza ser el autor y dueño de derechos de autor y/o titular de la licencia con respecto a cualquier contenido alojado y, asimismo, representa y garantiza que ningún contenido viola la marca registrada o los derechos de terceros. Cúrsame se reserva el derecho de suspender o rescindir la(s) transmisión(es) que, a su criterio, violan estas políticas o violan alguna ley o regulación.  </p> 
+<p>El Cliente no deberá desarmar, desmontar, decodificar, extraer, revertir la ingeniería o de otra forma intentar derivar el código fuente del "software" (incluyendo los dispositivos, métodos, procesos, e infraestructura) que sustentan los Servicios o cualquier otro software en el sitio Web de Cúrsame. 8.4 Violación de derecho de autor o marca registrada Los Servicios de Cúrsame se pueden utilizar únicamente con propósitos legales. Se prohíbe la transmisión, distribución o almacenamiento de cualquier material en violación a cualquier ley vigente o regulación, incluyendo la exportación de leyes de control. Esto incluye, sin limitación, material protegido por patente, derecho de autor, marca registrada, marca identificada de servicios, secreto de fabricación, u otros derechos de propiedad intelectual. Si utiliza material de terceros, deberá obtener autorización previa. Al utilizar los Servicios, usted representa y garantiza ser el autor y dueño de derechos de autor y/o titular de la licencia con respecto a cualquier contenido alojado y, asimismo, representa y garantiza que ningún contenido viola la marca registrada o los derechos de terceros. Cúrsame se reserva el derecho de suspender o rescindir la(s) transmisión(es) que, a su criterio, violan estas políticas o violan alguna ley o regulación.  </p> 
 
 <h3>7.5 Mal uso de los recursos del sistema   </h3>
 
-<p>El Cliente no deberá hacer mal uso de los recursos, que incluyan pero que no se limiten a, empleo del contenido que consume excesivo tiempo en el CPU o espacio de almacenamiento; utilización excesiva de la banda ancha; o reventa del acceso al contenido alojado en los servidores de Cúrsame.  </p> 
+<p>El Cliente no deberá hacer mal uso de los recursos, que incluyan pero que no se limiten a, empleo del contenido que consume excesivo tiempo en el CPU o espacio de almacenamiento; utilización excesiva de la banda ancha; o reventa del acceso al contenido alojado en los servidores de Cúrsame.   </p> 
 
 <h3>7.6 Otras actividades   </h3>
 
@@ -112,7 +112,7 @@
  
 <h2>9. Limitación de la responsabilidad de protección a contenidos.   </h2>
 
-<p>Cúrsame no indemnizará al usuario en  fallo del sistema, perdida de su información, jaqueo, destrucción de su información voluntariamente, intento de daño de otro usuario, uso de su información para daño físico, uso de su información para daño moral, uso de su información para cualquier tipo de violación a la ley. No nos hacemos responsables del uso que se le dé a sus contenidos en la red.</p>
+<p>Cúrsame no indemnizará al usuario en fallo del sistema, perdida de su información, jaqueo, destrucción de su información voluntariamente, intento de daño de otro usuario, uso de su información para daño físico, uso de su información para daño moral, uso de su información para cualquier tipo de violación a la ley. No nos hacemos responsables del uso que se le dé a sus contenidos en la red.</p>
  
 <h2>10. Tipo de indemnización.   </h2>
 
