--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,7 +5,7 @@
     <%= link_to "Ayuda", help_path  %> | 
     <%= link_to "Blog", blog_path %> | 
     <a href="">M&oacute;vil </a> | 
-    <a href="">Privacidad</a> | 
+    <%= link_to "Privacidad", privacidad_path %> | 
     <%= link_to "Términos", terms_path %> | 
     <a href="">Publicidad</a> | 
     <a href="">Recursos</a> 
