--- a/app/views/admin/base/reports_in_proces.html.erb
+++ b/app/views/admin/base/reports_in_proces.html.erb
@@ -8,10 +8,9 @@
          
         </ul>
      </div>
-    
-
+<% if @send_reports != nil%>
 <% @send_reports.reverse.each do |report|%>
-<% if report.status == nil%>
+<% if report.status == "1"%>
 <% @reports_id = report.id %>
 <div class="span12" style="border:0px;">
     <div class="span11" style="border:solid; margin:16px; border-color:#92B7C1; border-radius:    15px;  padding:10px;">
@@ -117,6 +116,7 @@
 <%end%>
 </div>
 </div>
+<%end%>
 <%end%>
 <%end%>
 </div>
