agregando users al super admin para mejorar el manejo de usuarios

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -39,6 +39,8 @@
               <li><%= link_to 'Tutoriales', admin_tutorial_path %></li>
               <li><%= link_to 'Notificaciones', admin_notification_path %></li>
               <li><%= link_to 'Publicidad', admin_publicity_path %></li>
+              <li><%= link_to 'Usuarios', admin_users_path %></li>
+              
             </ul>
           </div>
 
