subiendo cambios en users admin para generar search

--- a/app/views/admin/base/users.html.erb
+++ b/app/views/admin/base/users.html.erb
@@ -4,6 +4,7 @@
 <h2>Total = <%= @total_users.count %></h2>
 </div>
 </div>
+<h3><%= link_to "Búsqueda específica de usuario >>", admin_users_specific_search_path %></h3>
 </br></br></br></br></br>
 <% @users.each do |user|%>
 </br>
