subiendo cambios en users admin sigue sin servir el editar devido a que no encuentra el update sin una network desde el admin

--- a/app/views/admin/base/users.html.erb
+++ b/app/views/admin/base/users.html.erb
@@ -9,7 +9,7 @@
 <% @users.each do |user|%>
 </br>
 <div class="well">
-Nombre: <%= user.name%></br>
+Nombre: <%= link_to user.name, admin_users_show_path(user)%></br>
 Email: <%= mail_to user.email, user.email%></br>
 Role: <%= user.role%></br>
 <% user.networks.each do |network|%>
