--- a/app/views/accepted_terms/_form.html.erb
+++ b/app/views/accepted_terms/_form.html.erb
@@ -10,7 +10,7 @@
   </div>
   <div class="actions">
       <CENTER>
-   <h1> <%= f.submit "ACEPTO LOS TERMINOS Y CONDICIONES DEL SITIO", :class => "btn" %></h1>
+        <h1 style="margin-left:-150px;"><%= f.submit "ACEPTO LOS TERMINOS Y CONDICIONES DEL SITIO", :class => "btn" %></h1>
       <CENTER>
   </div>
 <% end %>
