subiendo a heroku cambio en el search

--- a/app/views/admin/base/specific_search.html.erb
+++ b/app/views/admin/base/specific_search.html.erb
@@ -40,7 +40,9 @@
   <%end%>
 <% end %>
  </div>
+ <%= paginate @users %>
 </div>
+
   <script>
   	function UserAdminEdition(id){
   		$('#editptr-'+id).toggle();
