--- a/app/views/home/members.html.erb
+++ b/app/views/home/members.html.erb
@@ -16,7 +16,7 @@
     <% end %>
   </div>
 
-    <div class="members-grid">
+    <div class="members-grid page">
       <ul class="nav-member-avatars">
         <% @users.each do |user| %>
             <% if user.view_status == "fantom"%>
@@ -25,8 +25,12 @@
           <%end%>
         <% end %>
       </ul>
-      <%= link_to t(".all_members"), network_members_path %>
     </div>
 
   </div>
 </div>
+<script type="text/javascript">
+  $(function(){
+    setupAutoScroll();
+  });
+</script>
