Analytics Telefonica CSV
Se agrega al panel de supervisores la opcion para descargar reportes CSV

--- a/app/views/supervisor/shared/_admin_menu.html.erb
+++ b/app/views/supervisor/shared/_admin_menu.html.erb
@@ -8,4 +8,5 @@
   <%= tab.students t('.students'), supervisor_students_path %>
   <%= tab.new_user t('.new_user'), supervisor_new_user_path %>
   <%= tab.suspended t('.suspendidos'), user_suspended_path %>
+  <%= tab.analytics 'Analytics', supervisor_analytics_path %>
 <% end %>
