Se agrega el link de descaga directo al reporte de usuarios

--- a/app/views/supervisor/analytics.html.erb
+++ b/app/views/supervisor/analytics.html.erb
@@ -19,7 +19,7 @@
           <div id="notifications">
             <div class='notification'>
               <div class="date-published">
-                <%= link_to 'Reporte de usuarios', '/analytics/users.csv' %>
+                <%= link_to 'Reporte de usuarios', 'http://alfredot.babaslovesyou.com/users.csv' %>
               </div>
             </div>
           </div>
