Se agrega reporte de logins y posts

--- a/app/views/supervisor/analytics.html.erb
+++ b/app/views/supervisor/analytics.html.erb
@@ -19,7 +19,9 @@
           <div id="notifications">
             <div class='notification'>
               <div class="date-published">
-                <%= link_to 'Reporte de usuarios', 'http://alfredot.babaslovesyou.com/users.csv' %>
+                <%= link_to 'Reporte de Usuarios', 'http://50.116.21.144/users.csv' %>
+                <%= link_to 'Reporte de Posts', 'http://50.116.21.144/posts.csv' %>
+                <%= link_to 'Reporte de Logins', 'http://50.116.21.144/logins.csv' %>
               </div>
             </div>
           </div>
