Se agregan al menu de analytics los nuevos reportes

--- a/app/views/supervisor/analytics.html.erb
+++ b/app/views/supervisor/analytics.html.erb
@@ -20,7 +20,15 @@
             <div class='notification'>
               <div class="date-published">
                 <%= link_to 'Reporte de Usuarios', 'http://50.116.21.144/users.csv' %>
+              </div>
+            </div>
+            <div class='notification'>
+              <div class="date-published">
                 <%= link_to 'Reporte de Posts', 'http://50.116.21.144/posts.csv' %>
+              </div>
+            </div>
+            <div class='notification'>
+              <div class="date-published">
                 <%= link_to 'Reporte de Logins', 'http://50.116.21.144/logins.csv' %>
               </div>
             </div>
