Se agrega reporte de acceso por dispositivos

--- a/app/views/supervisor/analytics.html.erb
+++ b/app/views/supervisor/analytics.html.erb
@@ -32,6 +32,11 @@
                 <%= link_to 'Reporte de Logins', 'http://50.116.21.144/logins.csv' %>
               </div>
             </div>
+            <div class='notification'>
+              <div class="date-published">
+                <%= link_to 'Reporte de Dispositivos', :controller=>"analytics", :action=>"devices", :format=>"csv" %>
+              </div>
+            </div>
           </div>
         </div>
       </div>
