Se colocan reportes por fecha

--- a/app/views/supervisor/analytics.html.erb
+++ b/app/views/supervisor/analytics.html.erb
@@ -19,6 +19,28 @@
           <div id="notifications">
             <div class='notification'>
               <div class="date-published">
+                <div class="date-published">10 al 17 de enero</div>
+                <%= link_to 'Reporte de Usuarios', 'http://50.116.21.144/users-20130110-20130117.csv' %>
+              </div>
+            </div>
+            <div class='notification'>
+              <div class="date-published">
+                <%= link_to 'Reporte de Posts', 'http://50.116.21.144/posts-20130110-20130117.csv' %>
+              </div>
+            </div>
+            <div class='notification'>
+              <div class="date-published">
+                <%= link_to 'Reporte de Logins', 'http://50.116.21.144/logins.csv-20130110-20130117' %>
+              </div>
+            </div>
+            <div class='notification'>
+              <div class="date-published">
+                <%= link_to 'Reporte de Dispositivos', :controller=>"analytics", :action=>"devices", :format=>"csv" %>
+              </div>
+            </div>
+            <div class='notification'>
+              <div class="date-published">
+                <div class="date-published">Diciembre</div>
                 <%= link_to 'Reporte de Usuarios', 'http://50.116.21.144/users.csv' %>
               </div>
             </div>
@@ -30,11 +52,6 @@
             <div class='notification'>
               <div class="date-published">
                 <%= link_to 'Reporte de Logins', 'http://50.116.21.144/logins.csv' %>
-              </div>
-            </div>
-            <div class='notification'>
-              <div class="date-published">
-                <%= link_to 'Reporte de Dispositivos', :controller=>"analytics", :action=>"devices", :format=>"csv" %>
               </div>
             </div>
           </div>
