--- a/app/views/supervisor/analytics.html.erb
+++ b/app/views/supervisor/analytics.html.erb
@@ -30,7 +30,7 @@
             </div>
             <div class='notification'>
               <div class="date-published">
-                <%= link_to 'Reporte de Logins', 'http://50.116.21.144/logins.csv-20130110-20130117' %>
+                <%= link_to 'Reporte de Logins', 'http://50.116.21.144/logins.csv-20130110-20130117.csv' %>
               </div>
             </div>
             <div class='notification'>
