Se agrega reporte de cuestionarios

--- a/app/views/supervisor/analytics.html.erb
+++ b/app/views/supervisor/analytics.html.erb
@@ -19,6 +19,11 @@
           <div id="notifications">
             <div class='notification'>
               <div class="date-published">
+                <%= link_to 'Quizzes', :controller=>"analytics", :action=>"surveys", :format=>"csv" %>
+              </div>
+            </div>
+            <div class='notification'>
+              <div class="date-published">
                 <div class="date-published">10 al 17 de enero</div>
                 <%= link_to 'Reporte de Usuarios', 'http://50.116.21.144/users-20130110-20130117.csv' %>
               </div>
