--- a/app/views/supervisor/analytics.html.erb
+++ b/app/views/supervisor/analytics.html.erb
@@ -17,11 +17,13 @@
             <h2>Analytics</h2>
           </div>
           <div id="notifications">
+
             <div class='notification'>
               <div class="date-published">
                 <%= link_to 'Quizzes', :controller=>"analytics", :action=>"surveys", :format=>"csv" %>
               </div>
             </div>
+
             <div class='notification'>
               <div class="date-published">
                 <div class="date-published">10 al 17 de enero</div>
@@ -40,25 +42,98 @@
             </div>
             <div class='notification'>
               <div class="date-published">
-                <%= link_to 'Reporte de Dispositivos', :controller=>"analytics", :action=>"devices", :format=>"csv" %>
+                <%= link_to 'Reporte de Dispositivos', 'http://50.116.21.144/devices-20130110-20130117.csv' %>
+              </div>
+            </div>
+
+            <div class='notification'>
+              <div class="date-published">
+                <div class="date-published">03 al 10 de enero</div>
+                <%= link_to 'Reporte de Usuarios', 'http://50.116.21.144/users-20130103-20130110.csv' %>
               </div>
             </div>
             <div class='notification'>
               <div class="date-published">
-                <div class="date-published">Diciembre</div>
-                <%= link_to 'Reporte de Usuarios', 'http://50.116.21.144/users.csv' %>
+                <%= link_to 'Reporte de Posts', 'http://50.116.21.144/posts-20130103-20130110.csv' %>
               </div>
             </div>
             <div class='notification'>
               <div class="date-published">
-                <%= link_to 'Reporte de Posts', 'http://50.116.21.144/posts.csv' %>
+                <%= link_to 'Reporte de Logins', 'http://50.116.21.144/logins-20130103-20130110.csv' %>
               </div>
             </div>
             <div class='notification'>
               <div class="date-published">
-                <%= link_to 'Reporte de Logins', 'http://50.116.21.144/logins.csv' %>
+                <%= link_to 'Reporte de Dispositivos', 'http://50.116.21.144/devices-20130103-20130110.csv' %>
               </div>
             </div>
+
+            <div class='notification'>
+              <div class="date-published">
+                <div class="date-published">27 de diciembre al 03 de enero</div>
+                <%= link_to 'Reporte de Usuarios', 'http://50.116.21.144/users-20121227-20130103.csv' %>
+              </div>
+            </div>
+            <div class='notification'>
+              <div class="date-published">
+                <%= link_to 'Reporte de Posts', 'http://50.116.21.144/posts-20121227-20130103.csv' %>
+              </div>
+            </div>
+            <div class='notification'>
+              <div class="date-published">
+                <%= link_to 'Reporte de Logins', 'http://50.116.21.144/logins-20121227-20130103.csv' %>
+              </div>
+            </div>
+            <div class='notification'>
+              <div class="date-published">
+                <%= link_to 'Reporte de Dispositivos', 'http://50.116.21.144/devices-20121227-20130103.csv' %>
+              </div>
+            </div>
+
+            <div class='notification'>
+              <div class="date-published">
+                <div class="date-published">20 al 27 de diciembre</div>
+                <%= link_to 'Reporte de Usuarios', 'http://50.116.21.144/users-20121220-20121227.csv' %>
+              </div>
+            </div>
+            <div class='notification'>
+              <div class="date-published">
+                <%= link_to 'Reporte de Posts', 'http://50.116.21.144/posts-20121220-20121227.csv' %>
+              </div>
+            </div>
+            <div class='notification'>
+              <div class="date-published">
+                <%= link_to 'Reporte de Logins', 'http://50.116.21.144/logins-20121220-20121227.csv' %>
+              </div>
+            </div>
+            <div class='notification'>
+              <div class="date-published">
+                <%= link_to 'Reporte de Dispositivos', 'http://50.116.21.144/devices-20121220-20121227.csv' %>
+              </div>
+            </div>
+ 
+            <div class='notification'>
+              <div class="date-published">
+                <div class="date-published">13 al 20 de diciembre</div>
+                <%= link_to 'Reporte de Usuarios', 'http://50.116.21.144/users-20121213-20121220.csv' %>
+              </div>
+            </div>
+            <div class='notification'>
+              <div class="date-published">
+                <%= link_to 'Reporte de Posts', 'http://50.116.21.144/posts-20121213-20121220.csv' %>
+              </div>
+            </div>
+            <div class='notification'>
+              <div class="date-published">
+                <%= link_to 'Reporte de Logins', 'http://50.116.21.144/logins-20121213-20121220.csv' %>
+              </div>
+            </div>
+            <div class='notification'>
+              <div class="date-published">
+                <%= link_to 'Reporte de Dispositivos', 'http://50.116.21.144/devices-20121213-20121220.csv' %>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
