--- a/app/views/supervisor/analytics.html.erb
+++ b/app/views/supervisor/analytics.html.erb
@@ -18,9 +18,38 @@
           </div>
           <div id="notifications">
 
+            <% if false %>
             <div class='notification'>
               <div class="date-published">
                 <%= link_to 'Quizzes', :controller=>"analytics", :action=>"surveys", :format=>"csv" %>
+              </div>
+            </div>
+            <% end %>
+
+            <div class='notification'>
+              <div class="date-published">
+                <div class="date-published">17 al 24 de enero</div>
+                <%= link_to 'Reporte de Usuarios', 'http://50.116.21.144/users-20130117-20130124.csv' %>
+              </div>
+            </div>
+            <div class='notification'>
+              <div class="date-published">
+                <%= link_to 'Reporte de Posts', 'http://50.116.21.144/posts-20130117-20130124.csv' %>
+              </div>
+            </div>
+            <div class='notification'>
+              <div class="date-published">
+                <%= link_to 'Reporte de Logins', 'http://50.116.21.144/logins-20130117-20130124.csv' %>
+              </div>
+            </div>
+            <div class='notification'>
+              <div class="date-published">
+                <%= link_to 'Reporte de Dispositivos', 'http://50.116.21.144/devices-20130117-20130124.csv' %>
+              </div>
+            </div> 
+            <div class='notification'>
+              <div class="date-published">
+                <%= link_to 'Posts más comentados', 'http://50.116.21.144/most_commented-20130117-20130124.csv' %>
               </div>
             </div>
 
@@ -45,6 +74,11 @@
                 <%= link_to 'Reporte de Dispositivos', 'http://50.116.21.144/devices-20130110-20130117.csv' %>
               </div>
             </div>
+            <div class='notification'>
+              <div class="date-published">
+                <%= link_to 'Posts más comentados', 'http://50.116.21.144/most_commented-20130110-20130117.csv' %>
+              </div>
+            </div>
 
             <div class='notification'>
               <div class="date-published">
@@ -65,6 +99,11 @@
             <div class='notification'>
               <div class="date-published">
                 <%= link_to 'Reporte de Dispositivos', 'http://50.116.21.144/devices-20130103-20130110.csv' %>
+              </div>
+            </div>
+            <div class='notification'>
+              <div class="date-published">
+                <%= link_to 'Posts más comentados', 'http://50.116.21.144/most_commented-20130103-20130110.csv' %>
               </div>
             </div>
 
@@ -89,6 +128,11 @@
                 <%= link_to 'Reporte de Dispositivos', 'http://50.116.21.144/devices-20121227-20130103.csv' %>
               </div>
             </div>
+            <div class='notification'>
+              <div class="date-published">
+                <%= link_to 'Posts más comentados', 'http://50.116.21.144/most_commented-20121227-20130103.csv' %>
+              </div>
+            </div>
 
             <div class='notification'>
               <div class="date-published">
@@ -111,6 +155,11 @@
                 <%= link_to 'Reporte de Dispositivos', 'http://50.116.21.144/devices-20121220-20121227.csv' %>
               </div>
             </div>
+            <div class='notification'>
+              <div class="date-published">
+                <%= link_to 'Posts más comentados', 'http://50.116.21.144/most_commented-20121220-20121227.csv' %>
+              </div>
+            </div>
  
             <div class='notification'>
               <div class="date-published">
@@ -131,6 +180,11 @@
             <div class='notification'>
               <div class="date-published">
                 <%= link_to 'Reporte de Dispositivos', 'http://50.116.21.144/devices-20121213-20121220.csv' %>
+              </div>
+            </div>
+            <div class='notification'>
+              <div class="date-published">
+                <%= link_to 'Posts más comentados', 'http://50.116.21.144/most_commented-20121213-20121220.csv' %>
               </div>
             </div>
 
